--- a/eslitlos/principal.css
+++ b/eslitlos/principal.css
@@ -31,7 +31,7 @@ body{
     width: 100%;
     padding: 5px 3px;
     position: fixed;
-    top: -100px; /* Inicia fora da visualização */
+    top: -40px; /* Inicia fora da visualização */
     transition: top 0.3s ease-in-out;
     z-index: 1000;
   }
@@ -252,6 +252,14 @@ body{
 .caixa_esporte{
   background: none;
   background: url("../Imagens/CASSINO_ESPORTE.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.caixa_investimento{
+  background: none;
+  background: url("../Imagens/CASSINO_INVESTIMENTO.png");
+  background-color: var(--azul-escuro);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
