Colocando api de cassino e esporte

--- a/eslitlos/cadrastro.css
+++ b/eslitlos/cadrastro.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
+ 
 }
 .cabecalho_imagem{
     width: 30%;
@@ -19,6 +20,7 @@
     background-color: var(--azul-claro);
     border-radius: 10px;
     margin: auto;
+    margin-top: 50px;
     text-align: center;
     width: 90%;
     top: 50%;
@@ -91,4 +93,41 @@ legend{
     background-color: white;
     border-radius: 20px;
     padding: 10px;
+}
+@media screen and (min-width:768px) and (max-width:1200px){
+    .cabecalho{
+        display: flex;
+        justify-content: center;
+ 
+    }
+.box{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.cabecalho_imagem{
+    width: 20%;
+    margin-right: 10%;
+}
+.cabecalho_texto{
+    font-size: 1.2em;
+}
+}
+
+@media screen and (min-width:1200px) {
+    .cabecalho{
+        display: flex;
+        justify-content: center;
+ 
+    }
+    .box{
+        margin-top: 70px;
+        margin-bottom: 50px;
+    }
+    .cabecalho_imagem{
+        width: 10%;
+        margin-right: 10%;
+    }
+    .cabecalho_texto{
+        font-size: 1.2em;
+    }
 }
