--- a/cassino/cassino.css
+++ b/cassino/cassino.css
@@ -46,6 +46,7 @@ h1 {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
 .bet-option {
@@ -57,6 +58,9 @@ h1 {
     margin-bottom: 1em;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.bet-option h2{
+    font-size: 1em;
 }
 .bet-option img {
     width: 50%;
@@ -77,3 +81,19 @@ h1 {
     bottom: 0;
     width: 100%;
 }
+@media screen and (min-width:768px) and (max-width:1200px){
+    .bet-option {
+        display: grid;
+        width: 40%;
+        background-color: #fff;
+        padding: 1em;
+    
+        margin-bottom: 1em;
+        border-radius: 5px;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+    .bet-option h2{
+        font-size: 1.2em;
+    }
+}
+
