--- a/cassino/cassino.css
+++ b/cassino/cassino.css
@@ -1,27 +1,32 @@
 @import url(../eslitlos/padrao_importe.css);
 
 .user-info {
-   width: 100vw;
+
     background-color: #fff;
     border-radius: 5px;
-    margin-bottom: 1em;
+    margin-bottom: 16px;
+    padding: 5px;
 }
 .infor{
     display: flex;
     justify-content: space-between;
     align-items: center;
-     padding: 1em;
 }
 .user-info img {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    margin-right: 1em;
+    margin-right: 16px;
 }
 
 .balance {
-    font-size: 1.2em;
+    font-size: 1em;
     color: #333;
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 10px;
+    background-color: #9CBCD9;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
 }
 
 .bet-options {
@@ -36,9 +41,9 @@
     display: grid;
     width: 30%;
     background-color: #fff;
-    padding: 1em;
+    padding: 10px;
 
-    margin-bottom: 1em;
+    margin-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -51,30 +56,28 @@
 .bet-option img {
     width: 50%;
     border-radius: 5px;
-    margin-bottom: 1em;
+    margin-bottom: 10px;
     margin: auto;
 }
 .bet-option button{
-    width: 50%;
+    width: 80%;
     margin: auto;
+    border-radius: 10px;
 }
 .footer {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 1em;
+    padding: 5px;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
 }
 @media screen and (min-width:768px) {
     .bet-option {
         display: grid;
         width: 40%;
         background-color: #fff;
-        padding: 1em;
-    
-        margin-bottom: 1em;
         border-radius: 5px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     }
@@ -84,5 +87,8 @@
     .bet-option p{
         font-size: 1em;
     }
+    .bet-option button{
+        width: 50%;
+}
 }
 
