--- a/investimento/style/investimento.css
+++ b/investimento/style/investimento.css
@@ -17,28 +17,40 @@ main {
 
 h1, h2 {
     color: #333;
+    margin-top: 10px;
 }
 
 p {
     color: #555;
+    margin-top: 10px;
 }
 
 .investment-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px;
+    padding: 2px;
     color: #FFF;
     background-color: #333;
     border-radius: 5px;
     margin-bottom:50px;
 }
-
+.investment-info span{
+    font-size: 0.8em;
+}
 .investment-info img {
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    margin-right: 1em;
+}
+.balance{
+    font-size: 1em;
+    color: #333;
+    border: 1px solid black;
+    padding: 2px;
+    border-radius: 10px;
+    background-color: #9CBCD9;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
 }
 .investment-details_texto{
     padding-left: 16px;
